20-lab-launch-ec2-rds-instances-and-connect-them/sg.tf
resource "aws_security_group" "rds_sg" {
  name        = "rds_sg"
  description = "Allow port 3306 traffic"
  #vpc_id = aws_vpc.main.id

  ingress {
    description = "Allow port 3306 traffic"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow port 22 traffic"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
